v3.x.y - YYYY-MMM-DD (to be released)
------------------------------------- 
 
  - IMPORTANT: SecDefaultAction behaves changing: SecDefaultAction specified
    on a child configuration will overwrite the ones specified on the parent;
    Previously it was concatenating.
    [@zimmerle]
  - Using std::shared_ptr instead of generates its own references counters
    for Rules and related.
    [@zimmerle]
  - Better handle shared_pointers on messages aiming for better performance.
    [@zimmerle]
  - Better handle memory usage on transformations aiming for better
    performance.
    [@zimmerle]
  - Coding refactoring on the Rule class. The Rule class is now refactored
    into RuleWithOperator, RuleWithActions, and RuleUnconditional.
  - Adds support to lua 5.4
    [@zimmerle]
  - GeoIP: switch to GEOIP_MEMORY_CACHE from GEOIP_INDEX_CACHE
    [Issues #2378, #2186 - @defanator]
  - rx: exit after full match (remove /g emulation); ensure capture
    groups occuring after unused groups still populate TX vars
    [Issue #2336 - @martinhsv]
  - Correct CHANGES file entry for #2234
  - Add support to test framework for audit log content verification
    and add regression tests for issues #2000, #2196
  - Support configurable limit on number of arguments processed
    [Issue #2234 - @jleproust, @martinhsv]
  - Multipart Content-Dispostion should allow field: filename*=
    [@martinhsv]
  - Fix rule-update-target for non-regex
    [Issue 2251 - @martinhsv]
  - Fix configure script when packaging for Buildroot
    [Issue 2235 - @frankvanbever]
  - modsecurity.pc.in: add Libs.private
    [Issue #1918, #2253 - @ffontaine, @Dridi, @victorhora]  

v3.0.4 - 2020-Jan-13
--------------------

 - Fix: audit log data omitted when nolog,auditlog
   [@martinhsv]
 - Fix: ModSecurity 3.x inspectFile operator does not pass
   FILES_TMPNAMES parameter to lua engine
   [Issue #2204, #2205 - @kadirerdogan]
 - XML: Remove error messages from stderr
   [Issue #2010 - @JaiHarpalani, @zimmerle]